Introduce StartPageTokenLoader, which will replace AboutResourceLoader.

Currently AboutResourceLoader is used to retrieve and cache the largest
change id from the server for the users corpus. To imlpement TeamDrvies we
need to move to using start page tokens instead.

This CL introduces StartPageTokenLoader which performs the loading and caching
of the start page token for a give team drive.

As AboutResourceLoader is going to be removed from ChangeListLoader I pulled
it out and put it into it's own file, and created a unittest specifically for
it.

There is some duplication in the unittest setup code, which I can eliminate in a
followup CL. As it's possible we'll remove AboutResourceLoader entirely I wanted
to wait and see before refactoring the unit tests.


Bug: 833690
Change-Id: I079cdb898b28427e07109913a74f1dd4b2071ef1
Reviewed-on: https://chromium-review.googlesource.com/1016216
Reviewed-by: Ryo Hashimoto <hashimoto@chromium.org>
Commit-Queue: Stuart Langley <slangley@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551941}
Former-commit-id: ad8728cb4a4a9aae5e3218161aed2fdd10ab97b0